--- a/firefox/stylus/githubRichCodeEditor.user.css
+++ b/firefox/stylus/githubRichCodeEditor.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name githubRichCodeEditor
-@version 1.0.0
+@version 2.0.0
 @description Various refinements to GitHub's rich code editor.
 @namespace github.com/ravindUwU/dotfiles
 @updateURL https://raw.githubusercontent.com/ravindUwU/dotfiles/main/firefox/stylus/githubRichCodeEditor.user.css
@@ -9,11 +9,21 @@
 @-moz-document domain("github.com") {
 
 	/* Highlighted active tokens are distacting. Force transparent background */
-    react-app[app-name="react-code-view"] {
+	react-app[app-name="react-code-view"] {
 		& .react-code-file-contents {
 			& span {
 				background-color: transparent;
 			}
 		}
+	}
+
+	/* Hide editor symbols pane */
+	div:has(> #symbols-pane) {
+		display: none;
+	}
+
+	/* Hide close symbols pane button */
+	span[aria-label="Close symbols panel"] {
+		display: none;
 	}
 }
