--- a/firefox/stylus/githubRichCodeEditor.user.css
+++ b/firefox/stylus/githubRichCodeEditor.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name githubRichCodeEditor
-@version 2.0.0
+@version 3.0.0
 @description Various refinements to GitHub's rich code editor.
 @namespace github.com/ravindUwU/dotfiles
 @updateURL https://raw.githubusercontent.com/ravindUwU/dotfiles/main/firefox/stylus/githubRichCodeEditor.user.css
@@ -23,6 +23,7 @@
 	}
 
 	/* Hide close symbols pane button */
+	span[aria-label="Open symbols panel"],
 	span[aria-label="Close symbols panel"] {
 		display: none;
 	}
