Update refined findbar config to include $opacity-when-unfocused: 1

--- a/firefox/refined-findbar.scss
+++ b/firefox/refined-findbar.scss
@@ -7,9 +7,10 @@
 
 	$buttons: true,
 	$buttons-grouped: true,
-	$hide-close-button: true,
 
+	$hide-close-button: true,
 	$hide-when-unfocused: true,
+	$opacity-when-unfocused: 1,
 
 	$order: (
 		LABELS,
